--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,4 @@
 {
     "python.analysis.typeCheckingMode": "basic",
-    "python.linting.pylintEnabled": false,
-    "python.linting.enabled": true,
-    "python.linting.pycodestyleEnabled": true,
-    "python.linting.flake8Enabled": false,
-    "python.linting.mypyEnabled": false
+    "python.analysis.autoImportCompletions": true
 }
